<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="424dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/vote_pole" />
    <androidx.cardview.widget.CardView
        android:layout_width="319dp"
        android:layout_height="425dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.88">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/voterid_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="50dp"
            android:hint="Voter Id"
            android:textColorHint="@color/purple"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/voterid_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="50dp"

            android:hint="Password"
            android:textColorHint="@color/purple"
            app:counterEnabled="true"
            app:counterMaxLength="10"

            app:endIconMode="password_toggle"
            app:helperTextTextColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="141dp"
            android:layout_height="36dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif"
            android:text="Voter Login"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="#FF7A49"
            android:textSize="22dp"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="230dp"
            android:text="@string/remember" />

        <Button
            android:id="@+id/button"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="270dp"
            android:background="@drawable/button_shape"
            android:text="LOGIN"
            android:onClick="Validate"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="325dp"
            android:text="OR"
            android:fontFamily="sans-serif"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/admin"
            android:layout_width="141dp"
            android:layout_height="36dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="345dp"
            android:fontFamily="sans-serif"
            android:text="@string/adminlogin"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="#FF7A49"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="390dp"
            android:text="@string/terms"
            android:fontFamily="sans-serif"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="413dp"
        android:layout_height="368dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0">

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>